--- a/intro/index.html
+++ b/intro/index.html
@@ -2,7 +2,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>fugu</title>
+  <title>Beta bot Cripto- betabot.org</title>
 
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -238,7 +238,7 @@
                       <div class="single-dropdown-block">
                         <h3>contact style</h3>
                         <a class="mega-drop-menu-item sub-menu--item d-block" href="/contact-dark">contact dark</a>
-                        <a class="mega-drop-menu-item sub-menu--item d-block" href="/contact">contact light 01</a>
+                        <a class="mega-drop-menu-item sub-menu--item d-block" href="/spot">contact light 01</a>
                         <a class="mega-drop-menu-item sub-menu--item d-block" href="/contact-light">contact light 02</a>
                       </div>
                     </li>
