--- a/intro/index.html
+++ b/intro/index.html
@@ -273,8 +273,8 @@
             <h1 class="wow fadeInUpX" data-wow-delay="0s">EXPLORE O PAINEL BETACRIPTO E DESCUBRA</h1>
             <p class="wow fadeInUpX" data-wow-delay="0.25s"> oportunidades incríveis no dinâmico universo das criptomoedas</p>
             <div class="fugu-app-btn-wrap wow fadeInUpX" data-wow-delay="0.40s">
-              <a class="fugu-app-btn" href="/contact"><img src="https://betabot.org/intro/images/futuros.png" alt=""></a>
-              <a class="fugu-app-btn" href="/contact"><img src="https://betabot.org/intro/images/spot.png" alt=""></a>
+              <a class="fugu-app-btn" href="/futuros"><img src="https://betabot.org/intro/images/futuros.png" alt=""></a>
+              <a class="fugu-app-btn" href="/spot"><img src="https://betabot.org/intro/images/spot.png" alt=""></a>
             </div>
             <div class="fugu-hero-client-area wow fadeInUpX" data-wow-delay="0.50s">
               <div class="fugu-hero-client-wrap">
