--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         <div class="col-xl-6 col-lg-7">
           <div class="fugu-hero-content">
             <h1 class="wow fadeInUpX" data-wow-delay="0s">EXPLORE O PAINEL BETACRIPTO E DESCUBRA</h1>
-            <p class="wow fadeInUpX" data-wow-delay="0.25s"> oportunidades incríveis no dinâmico universo das criptomoedas</p>
+            <p class="wow fadeInUpX" data-wow-delay="0.25s"> Aproveite Insights Poderosos no Dinâmico Mundo das Criptos.</p>
             <div class="fugu-app-btn-wrap wow fadeInUpX" data-wow-delay="0.40s">
               <a class="fugu-app-btn" href="/futuros"><img src="https://betabot.org/intro/images/futuros.png" alt=""></a>
               <a class="fugu-app-btn" href="/spot"><img src="https://betabot.org/intro/images/spot.png" alt=""></a>
