--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
       <div class="row">
         <div class="col-xl-6 col-lg-7">
           <div class="fugu-hero-content">
-            <h1 class="wow fadeInUpX" data-wow-delay="0s">EXPLORE O PAINEL BETACRIPTO E DESCUBRA</h1>
+            <h1 class="wow fadeInUpX" data-wow-delay="0s">EXPLORE O PAINEL BETACRIPTO E DESCUBRA O MUNDO DAS CRIPTOS</h1>
             <p class="wow fadeInUpX" data-wow-delay="0.25s"> Aproveite Insights Poderosos no Dinâmico Mundo das Criptos.</p>
             <div class="fugu-app-btn-wrap wow fadeInUpX" data-wow-delay="0.40s">
               <a class="fugu-app-btn" href="/futuros"><img src="https://betabot.org/intro/images/futuros.png" alt=""></a>
