--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://raw.githubusercontent.com/ALEEXGGO/betabot/007d985252869bbe0749f04c46e86a711a3689cf/betafuturos.svg" />
+    <link rel="icon" type="image/svg+xml" href="www.betabot.org/betafuturos.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beta Bot - Dominando o Mercado Cripto</title>
   </head>
